@@ -1,5 +1,8 @@
 Release 2.8.1 - ???
 
+   * Changed default decompressConcatenated to true in CompressorParser.
+     Users may revert to legacy behavior via tika-config.xml (TIKA-4048).
+
    * Fixed write limit bug in RecursiveParserWrapper (TIKA-4055).
 
    * Add mime detection for many files (TIKA-3992).
